//  id int [pk, increment]
//  uuid uuid [note: 'default-for-postgresql: uuid_generate_v4()']
//  ...
//  created_at timestamp [not null, note: 'on create `now()`']
//  updated_at timestamp [not null, note: 'on update `now()`']

//  deleted_at timestamp

Table users {
  id int [pk, increment]
  uuid uuid [note: 'default-for-postgresql: uuid_generate_v4()']
  username string
  password string [not null]
  created_at timestamp [not null, note: 'on create `now()`']
  updated_at timestamp [not null, note: 'on update `now()`']
  deleted_at timestamp
}

Table user_mobiles {
  id int [pk, increment]
  uuid uuid [note: 'default-for-postgresql: uuid_generate_v4()']
  user_id int [ref: > users.id]
  mobile int [not null]
  is_default bool [not null, default: false]
  verification_id int [ref: > verifications.id]
  created_at timestamp [not null, note: 'on create `now()`']
  updated_at timestamp [not null, note: 'on update `now()`']
  deleted_at timestamp
}

Table user_emails {
  id int [pk, increment]
  uuid uuid [note: 'default-for-postgresql: uuid_generate_v4()']
  user_id int [ref: > users.id]
  email string
  is_default bool [not null, default: false]
  verification_id int [ref: > verifications.id]
  created_at timestamp [not null, note: 'on create `now()`']
  updated_at timestamp [not null, note: 'on update `now()`']
  deleted_at timestamp
}

Table logins {
  id int [pk, increment]
  uuid uuid [note: 'default-for-postgresql: uuid_generate_v4()']
  user_id int [ref: > users.id]
  ip string [not null]
  is_success bool [not null]
  created_at timestamp [not null, note: 'on create `now()`']
  updated_at timestamp [not null, note: 'on update `now()`']
}

enum channel {
  SMS
  EMAIL
  CALL
}

Table verifications {
  id int [pk, increment]
  uuid uuid [note: 'default-for-postgresql: uuid_generate_v4()']
  user_id int [ref: > users.id]
  channel channel
  code string
  created_at timestamp [not null, note: 'on create `now()`']
  updated_at timestamp [not null, note: 'on update `now()`']
}

Table password_resets {
  id int [pk, increment]
  uuid uuid [note: 'default-for-postgresql: uuid_generate_v4()']
  user_id int [ref: > users.id]
  channel channel
  token text
  is_success bool [default: false]
  created_at timestamp [not null, note: 'on create `now()`']
  updated_at timestamp [not null, note: 'on update `now()`']
}